--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -16,15 +16,28 @@
     margin: 1rem;
 }
 
+strong {
+    font-size: 2rem;
+    color: #022C2F;
+    padding: 0.5rem;
+}
+
+span {
+    font-size: 1.5rem;
+    color: #022C2F;
+    padding-bottom: 0.5rem; 
+}
+
 h2 {
     font-size: 3rem;
     padding: 2rem;
     text-transform: uppercase;
+    color: #022C2F;
 }
 
 label {
     font-size: 2.5rem;
-    color: #fff;
+    color: #022C2F;
 }
 
 input {
